[gd_scene load_steps=19 format=3 uid="uid://dqmxkb3s7q1ch"]

[ext_resource type="Script" path="res://scripts/ai_enemy.gd" id="1_8avhd"]
[ext_resource type="Texture2D" uid="uid://ce3dg1ncjphu7" path="res://assets/sprites/Enemy/enemy captures player.png" id="2_2vpge"]
[ext_resource type="Texture2D" uid="uid://gc5vwvpfimjx" path="res://assets/sprites/Enemy/enemy.png" id="3_ud6wn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqtre"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_megco"]
atlas = ExtResource("2_2vpge")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_881ul"]
atlas = ExtResource("2_2vpge")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a846u"]
atlas = ExtResource("2_2vpge")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_birpj"]
atlas = ExtResource("3_ud6wn")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tambk"]
atlas = ExtResource("3_ud6wn")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqknx"]
atlas = ExtResource("3_ud6wn")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r10j"]
atlas = ExtResource("3_ud6wn")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pakls"]
atlas = ExtResource("3_ud6wn")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_23kti"]
atlas = ExtResource("3_ud6wn")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7fes"]
atlas = ExtResource("3_ud6wn")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_22xvj"]
atlas = ExtResource("3_ud6wn")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ifl1"]
atlas = ExtResource("3_ud6wn")
region = Rect2(32, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dddxk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_megco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_881ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a846u")
}],
"loop": false,
"name": &"Lose",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_birpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tambk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqknx")
}],
"loop": true,
"name": &"Walk_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r10j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pakls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23kti")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7fes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22xvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ifl1")
}],
"loop": true,
"name": &"Walk_Up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f4o1d"]
radius = 12.0

[node name="AIEnemy" type="CharacterBody2D"]
script = ExtResource("1_8avhd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 8)

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_pqtre")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dddxk")
animation = &"Walk_Up"

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_f4o1d")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="EnemySprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hitbox_body_entered"]
